# ZoKrates

./: Cargo.toml  README.md  publish.sh
zokrates_abi/: Cargo.toml
zokrates_analysis/: Cargo.toml
zokrates_ark/: Cargo.toml
zokrates_ast/: Cargo.toml
zokrates_bellman/: Cargo.toml
zokrates_bellperson/: Cargo.toml
zokrates_circom/: Cargo.toml
zokrates_cli/: Cargo.toml
zokrates_cli/src/ops/: compute_witness.rs  generate_proof.rs
zokrates_codegen/: Cargo.toml
zokrates_core/: Cargo.toml
zokrates_embed/: Cargo.toml
zokrates_fs_resolver/: Cargo.toml
zokrates_interpreter/: Cargo.toml
zokrates_lib/: Cargo.toml
zokrates_lib/src/: lib.rs
zokrates_lib/src/funciones/: command.rs  compile.rs  compute_witness.rs  generate_proof.rs  mod.rs  setup.rs  verify.rs
zokrates_pest_ast/: Cargo.toml
zokrates_profiler/: Cargo.toml
zokrates_proof_systems/: Cargo.toml
