[package]
name = "zokrates_bellman"
version = "0.1.3"
edition = "2021"

[features]
default = []
wasm = ["bellman/nolog", "bellman/wasm"]
multicore = ["bellman/multicore", "phase2/multicore"]

[dependencies]
zokrates_field = { version = "0.5", registry = "kellnr", default-features = false, features = ["bellman_extensions"] }
zokrates_ast = { version = "0.1", registry = "kellnr", default-features = false }
zokrates_proof_systems = { version = "0.1", registry = "kellnr", default-features = false }

bellman = { package = "bellman_ce", version = "^0.3", default-features = false }
pairing = { package = "pairing_ce", version = "^0.21" }
#phase2 = { git = "https://github.com/Zokrates/phase2", default-features = false }
# Es necesario bajarse el repositorio, exportar el paquete y subirlo a kellnr
phase2 = { package = "phase2", registry = "kellnr", version = "0.2.2", features = ["multicore"] }
rand_0_4 = { version = "0.4", package = "rand" }
rand_0_8 = { version = "0.8", package = "rand" }
getrandom = { version = "0.2.8" }
hex = "0.4.2"

[dev-dependencies]
zokrates_interpreter = { version = "0.1", registry = "kellnr", features = ["bellman"] }





