[package]
name = "zokrates_fs_resolver"
version = "0.5.2"
authors = ["Thibaut Schaeffer <thibaut@schaeff.fr>"]
repository = "https://github.com/JacobEberhardt/ZoKrates.git"
edition = "2018"

[dependencies]
zokrates_common = { version = "0.1.3",registry = "kellnr" }

[dev-dependencies]
tempfile = "3"